# ScreenAutoSolver

./: .gitignore  1.gitignore  LICENSE  README.md  build_exe.bat  build_exe.ps1  config.example.yaml  pyproject.toml  测试用网页.html
auto_solver/: __init__.py  __main__.py  api.py  calibrate.py  config.py  decision.py  gui.py  gui_entry.py  models.py  ocr.py  run_logging.py  runner.py  screen.py
tests/: test_api.py  test_config.py  test_decision.py  test_ocr.py  test_runner.py
