[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "screen-auto-solver"
version = "0.1.0"
description = "Screen-only SOP automation for authorized practice questions."
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "Pillow>=10",
  "PyYAML>=6",
]

[project.optional-dependencies]
screen = [
  "mss>=9",
  "pyautogui>=0.9.54",
]
ocr = [
  "rapidocr-onnxruntime>=1.3",
]
dev = []

[project.scripts]
auto-solver = "auto_solver.__main__:main"

[tool.setuptools.packages.find]
include = ["auto_solver*"]
